--- a/models_and_prediction.ipynb
+++ b/models_and_prediction.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Modeling the data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Imports"
    ]
@@ -24,9 +18,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -57,10 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Load data"
    ]
@@ -68,11 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -114,10 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Drop unnecessary columns"
    ]
@@ -125,11 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df.drop(['WAGE','NET_TRANSFER_SPEND','FINAL_POSITION','IS_ESTIMATED_MARKET_VAL',\n",
@@ -139,11 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -306,10 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Create holdout set of 2016-17 season data"
    ]
@@ -317,11 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "holdout = df[df['SEASON'] == '2016-17']\n",
@@ -332,10 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Split X and y"
    ]
@@ -344,9 +308,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -358,9 +320,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -371,9 +331,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -384,9 +342,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -397,9 +353,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -423,33 +376,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Create model pipeline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "I'm focussing on linear regression models and would like to test a linear, lasso, ridge and elasticnet regression model. For the latter three, I would like to try different hyperparameters to find a good value for the regularization alpha.  \n",
-    "\n",
-    "I'm intrigued to see which features (if any) the Lasso model zeros out."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -470,25 +406,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "The next step is to cross validate each of these models based on mean squared error, and then also score each of these models against the train/test split data I created above.\n",
-    "\n",
-    "I want to see the r-square value and coeficient values for each model."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -513,11 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model_performance = []\n",
@@ -547,9 +463,6 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -788,50 +701,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Apart from the ElasticNet model 4, all the other models basically performed just as well as each other, with an r-square in the 0.783 region."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Interestingly, Lasso model 4 (which had a pretty high lambda value of 1) zeroed out:\n",
-    "- NET_TRANSFER_SPEND_SCALED\n",
-    "- AVG_AGE\n",
-    "- AVG_TIME, and \n",
-    "- BIG_SIX\n",
-    "\n",
-    "The model itself only managed an r-square value of 0.71, though, so I think some of these features still have a place in my model.  \n",
-    "  \n",
-    "Interestingly, the stadium capacity feature is consistently bottom of the list and probably offers little in the way of explaining the data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "I'll try these models again based on the log of final points and see how that performs."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -842,9 +715,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -868,9 +739,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -901,9 +770,6 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -1143,30 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Wow, so the r-square values are really bad when trying to predict the log of the final points. I'll stick with the original dataset."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "I'm going to switch over to statsmodels now so that I can make use of the summary statistics."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "#### Statsmodels"
    ]
@@ -1174,11 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1331,26 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Performing the linear regression on the entire sample and not creating a train/test split results in a lower r-sqare of 0.685.  \n",
-    "  \n",
-    "As expected, WAGE_SCALED is statistically significant with a p-value of 0.000. BIG_SIX and SQUAD_SIZE also have very low p-values of 0.002.  \n",
-    "  \n",
-    "The p-values for YEARS_IN_LEAGUE, NET_TRANSFER_SPEND_SCALED, NUM_TRANSFERS_OUT and NUM_FOREIGN_TRANSFERS are 0.957, 0.703, 0.750 and 0.618 respectively, indicating that they don't really offer that much to the model.  \n",
-    "  \n",
-    "From my initial data exploration, I think that the most important information from the YEARS_IN_LEAGUE data is really only whether the team is new to the league, so I will amend that feature and see if it performs any better."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Amend YEARS_IN_LEAGUE"
    ]
@@ -1358,11 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['FIRST_SEASON'] = df['YEARS_IN_LEAGUE'].map(lambda x: 1 if x == 1 else 0)"
@@ -1372,9 +1188,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1387,11 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1561,11 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1717,33 +1523,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Sadly that did not achieve much, however, I am going to leave it in my model because it has a negative coefficient and intuitively that makes sense."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "I'll remove NET_TRANSFER_SPEND_SCALED, STADIUM_CAPACITY_SCALED, and NUM_TRANSFERS_OUT from the model and see how that performs."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1883,33 +1665,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "The r-squared value dropped by a tiny 0.01 and the adjusted r-squared increased by a similar amount."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "I will try also removing NUM_FOREIGN_PLAYERS..."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2045,33 +1803,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Doing so increased adjusted r-square by 0.01."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Lastly, I will try removing TEAM_MARKET_VALUE_SCALED and see how it performs. I expect it won't make a great deal of difference."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2203,23 +1937,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "The r-square measure only dropped marginally, so I will drop it from my model and stick with this as my final model."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"final_model.pkl\", \"wb\") as output_file:\n",
@@ -2230,9 +1950,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -2242,32 +1960,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Predictions"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "I'm going to now try and predict the 2016-17 Premier League table (my holdout data) using my model, and compare the prediction to the actual table."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2432,9 +2133,7 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -2445,11 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2472,9 +2167,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -2484,11 +2177,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "holdout['PREDICTED_POINTS'] = lm5_fit.predict(holdout_X).astype(int)"
@@ -2497,11 +2186,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "actual_table = holdout[['TEAM','FINAL_POINTS']].sort_values(by='FINAL_POINTS', ascending=False)\n",
@@ -2511,11 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2670,11 +2351,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2828,36 +2505,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### Conclusions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "- My model correctly relegated Middlesbrough and Hull City, but erroneously predicted that Sunderland would finish safe from relegation on 44 points.\n",
-    "- The other team that my model relegated was Watford, who in real life only finised one place higher and with 40 points vs the 38 predicted.\n",
-    "- At the other end of the table, my model is obviously a closet Manchester United fan, and predicted they would win the league with 79 points. In reality, Manchester United only managed 69 points and a 6th placed finish.\n",
-    "- All of the big six teams were correctly predicted to finish in the top 6 places, albeit in the wrong order.\n",
-    "- My model correctly predicted that Everton would end the season in 7th place.\n",
-    "- Similarly with the top 6 places, the mid-table sides are roughly the same in both the model and real life, in a slightly shuffled order.\n",
-    "- One general observation I can see (and thought may be an issue) is that at the upper end of the table, my model under-estimated the number of points the top few teams managed to accumulate. Likewise at the bottom - it also over-estimated points tallies and failed to predict the dismal sub-30 point showings of North-East sides, Middlesbrough and Sunderland."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "#### Chart of predicted vs actual points"
    ]
@@ -2865,11 +2513,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2922,7 +2566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
